--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
-    width: 30%;
+    width: 14%;
     margin: 0 auto;
     margin-top: 100px;
     padding: 20px;
@@ -44,15 +44,16 @@ button {
     padding: 10px;
     transition: all .3s;
 }
-
+button.c{
+    width: 100%;
+    background: rgb(187 176 122)
+}
 button:hover {
     background-color: rgb(97, 99, 100);
     transition: all .3s;
 }
 
-button.c{
-    width: 100%;
-}
+
 
 @media (max-width: 768px) {
     .wrapper {
